--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="../path/to/flowbite/dist/flowbite.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
